# simple_blog

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yaml
.github/workflows/: docker-publish.yml
blog/: Dockerfile  fresh.gen.ts
blog/components/: BlogPost.tsx  FileTable.tsx
blog/routes/: _layout.tsx  index.tsx
blog/routes/pinned/: [path].tsx  index.tsx
blog/routes/posts/: [path].tsx  index.tsx
blog_provider/: Cargo.toml  Dockerfile
blog_provider/src/: main.rs  post.rs  router.rs
release/: blog-deployment.yaml  blog-env-configmap.yaml  blog-service.yaml  kustomization.yaml
