[package]
name = "blog_provider"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
axum = "0.7.7"
chrono = { version = "0.4.38", features = ["serde"] }
metrics = "0.24.0"
metrics-exporter-prometheus = "0.16.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
structopt = { version = "0.3.26", features = ["color"] }
tokio = { version = "1.41.0", features = ["full", "tracing"] }
tower = { version = "0.5.1", features = ["tokio", "tracing"] }
tower-http = { version = "0.6.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
